Added scoring functionality to DOM

--- a/public/styles.css
+++ b/public/styles.css
@@ -43,6 +43,11 @@
   justify-content: center;
 }
 
-h1 {
+.select-weapon {
   text-align: center;
+}
+
+.score {
+  float: left;
+  padding: 15px;
 }
